package com.grupo6.lab3.entity;

import jakarta.persistence.Entity;
import lombok.Getter;
import lombok.Setter;

@Entity
@Getter
@Setter
public class TransferenciaPontos extends Transacao {
}
